UI fixes to make tranparent backgrounds to adjust dark mode in desc

--- a/src/app/components/desc-popup/desc-popup.component.scss
+++ b/src/app/components/desc-popup/desc-popup.component.scss
@@ -43,9 +43,14 @@ textarea {
   user-select: none;
   border-style: inherit;
   border-radius: 5px;
-
+  background-color: transparent;
+  
   &:focus-visible {
     border: 1px solid #FFF;
+  }
+
+  &:read-only {
+    background-color: transparent;
   }
 }
 
